--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,8 +9,6 @@
 
 body {
   font-family: "Space Mono", monospace;
-  max-width: 100%;
-  overflow-x: hidden;
 }
 
 // Header
